# activity-analyzer

./: README.md  pyproject.toml  questions.txt
src/activity_analyzer/: analyzer.py  cli.py
tests/: __init__.py
