[project]
name = "activity-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Tristan Crockett",email = "tristan.h.crockett@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests", "pytest (>=8.4.2,<9.0.0)"]

[tool.poetry]
packages = [{include = "activity_analyzer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
